WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
52808
Web Inspector: [Chromium] REGRESSION: Using the "Back" button while profiling causes renderer crash
https://bugs.webkit.org/show_bug.cgi?id=52808
Summary
Web Inspector: [Chromium] REGRESSION: Using the "Back" button while profiling...
Mikhail Naganov
Reported
2011-01-20 05:52:12 PST
From
http://code.google.com/p/chromium/issues/detail?id=70228
: Chromium 10.0.642.0 (71590) What steps will reproduce the problem? 1. Navigate to some page (e.g. google.com) 2. In the same tab, navigate to other page (e.g. yandex.ru) 3. Open DevTools, open CPU profiles page, start profiling. 4. Press the "Back" button in browser. Expected: tab navigates back to the page from item 1., profiling continues. Actual: tab renderer crashes.
Attachments
patch
(2.12 KB, patch)
2011-01-20 06:03 PST
,
Mikhail Naganov
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Naganov
Comment 1
2011-01-20 06:03:34 PST
Created
attachment 79589
[details]
patch
Yury Semikhatsky
Comment 2
2011-01-21 06:22:14 PST
Probably related Chromium issue:
http://code.google.com/p/chromium/issues/detail?id=67052
Yury Semikhatsky
Comment 3
2011-01-21 06:25:46 PST
Comment on
attachment 79589
[details]
patch r+ for this quick fix but we need to figure out what causes the crash.
Mikhail Naganov
Comment 4
2011-01-21 07:03:31 PST
Committed manually
http://trac.webkit.org/changeset/76345
2011-01-21 Mikhail Naganov <
mnaganov@chromium.org
> Reviewed by Yury Semikhatsky. Web Inspector: [Chromium] REGRESSION: Using the "Back" button while profiling causes renderer crash.
https://bugs.webkit.org/show_bug.cgi?id=52808
* inspector/InspectorProfilerAgent.cpp: (WebCore::InspectorProfilerAgent::addProfileFinishedMessageToConsole): (WebCore::InspectorProfilerAgent::addStartProfilingMessageToConsole): I agree, we should investigate the real cause of the crash.
WebKit Review Bot
Comment 5
2011-01-21 07:30:59 PST
http://trac.webkit.org/changeset/76345
might have broken GTK Linux 64-bit Debug The following tests are not passing: loader/reload-subresource-when-type-changes.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug