2011-01-21  Mikhail Naganov  <mnaganov@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: [Chromium] REGRESSION: Using the "Back" button
        while profiling causes renderer crash.

        https://bugs.webkit.org/show_bug.cgi?id=52808

        * inspector/InspectorProfilerAgent.cpp:
        (WebCore::InspectorProfilerAgent::addProfileFinishedMessageToConsole):
        (WebCore::InspectorProfilerAgent::addStartProfilingMessageToConsole):

Canonical link: https://commits.webkit.org/66580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76345 268f45cc-cd09-0410-ab3c-d52691b4dbfc